--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
     "@types/karma-fixture": "^0.2.2",
-    "browserify": "^13.0.1",
     "chai": "^3.5.0",
     "codecov": "^1.0.1",
     "complexity-report": "^1.4.1",
@@ -38,6 +37,8 @@
     "karma-sauce-launcher": "^0.3.1",
     "mocha": "^2.4.5",
     "phantomjs-prebuilt": "^2.1.4",
+    "rollup-plugin-typescript2": "^0.4.1",
+    "rollup-stream": "^1.19.0",
     "run-sequence": "^1.2.2",
     "ts-node": "^3.0.2",
     "tslint": "^4.5.1",
