--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rollup-stream": "^1.19.0",
     "run-sequence": "^1.2.2",
     "ts-node": "^3.0.2",
+    "tslib": "^1.7.1",
     "tslint": "^4.5.1",
     "typescript": "^2.0.7",
     "uglify-js": "^2.7",
