Setting up Travis CI (#11)
* Trying sample integration with Travis CI

* Changing travis install script

* Changing travis install script

* Adding build to Travis CI script

* Moving gulp installation from default 'install' to 'before_script'

* Removing 'travis' script from npm scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 sudo: false
 language: node_js
-script: "npm run travis"
 node_js:
   - "5"
+before_script:
+  - npm install -g gulp
+script:
+  - gulp build
+  - gulp coverage
+cache:
+  directories:
+    - "node_modules"
