--- a/package.json
+++ b/package.json
@@ -2,9 +2,23 @@
   "name": "clarity-js",
   "version": "0.1.0",
   "description": "An analytics library that uses web page interactions to generate aggregated insights",
-  "author": "Clarity Team",
+  "author": "Microsoft Corp.",
   "license": "MIT",
-  "main": "build/clarity.js",
+  "main": "./build/clarity.js",
+  "typings": "./clarity.d.ts",
+  "keywords": [
+    "clarity",
+    "Microsoft",
+    "interactions",
+    "cursor",
+    "pointer",
+    "instrumentation",
+    "analytics"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/clarity-js.git"
+  },
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
