--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-safari-launcher": "^0.1.1",
     "karma-sauce-launcher": "^0.3.1",
+    "karma-spec-reporter": "0.0.31",
     "mocha": "^2.4.5",
     "phantomjs-prebuilt": "^2.1.4",
     "rollup-plugin-typescript2": "^0.4.1",
     "rollup-stream": "^1.19.0",
     "run-sequence": "^1.2.2",
+    "selenium-webdriver": "3.4.0",
     "ts-node": "^3.0.2",
     "tslib": "^1.7.1",
     "tslint": "^4.5.1",
@@ -68,6 +70,7 @@
     "complexity": "node node_modules/complexity-report/src/index.js -f plain src/",
     "init": "npm install && npm install -g gulp && gulp place-git-hooks",
     "tslint": "node_modules/.bin/tslint --project ./",
-    "tslint-format": "node_modules/.bin/tslint --fix --project ./ --force"
+    "tslint-format": "node_modules/.bin/tslint --fix --project ./ --force",
+    "webtest": "karma start build/test/sauce.karma.conf.js"
   }
 }
