--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "karma-safari-launcher": "^0.1.1",
     "karma-sauce-launcher": "^0.3.1",
     "karma-spec-reporter": "0.0.31",
+    "karma-regex-preprocessor": "1.0.1",
     "mocha": "^2.4.5",
     "phantomjs-prebuilt": "^2.1.4",
     "rollup-plugin-typescript2": "^0.4.1",
