--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
 script:
   - gulp build
   - gulp coverage
-  - gulp webtest
+  - node webtest/test.js
 cache:
   directories:
     - "node_modules"
