--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     },
     "include":[
        "clarity.d.ts",
+       "converters/**/*.ts",
        "src/**/*.ts",
        "test/**/*.ts"
     ],
