--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "types" : ["jasmine", "karma-fixture"]
     },
     "include":[
-       "clarity.d.ts",
+       "declarations/**/*.d.ts",
        "converters/**/*.ts",
        "src/**/*.ts",
        "test/**/*.ts"
