--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An analytics library that uses web page interactions to generate aggregated insights",
   "author": "Microsoft Corp.",
   "license": "MIT",
-  "main": "build/clarity.js",
+  "main": "build/src/module.js",
   "keywords": [
     "clarity",
     "Microsoft",
