--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "clarity-js",
-  "version": "0.1.26",
+  "version": "0.1.27",
   "description": "An analytics library that uses web page interactions to generate aggregated insights",
   "author": "Microsoft Corp.",
   "license": "MIT",
-  "main": "build/clarity.js",
+  "main": "build/src/module.js",
   "keywords": [
     "clarity",
     "Microsoft",
