--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@types/jasmine": "^2.5.37",
     "@types/karma-fixture": "^0.2.2",
     "chai": "^3.5.0",
-    "codecov": "^1.0.1",
     "complexity-report": "^1.4.1",
     "copyfiles": "^1.0.0",
     "del": "^2.2.2",
@@ -49,7 +48,6 @@
     "karma-ie-launcher": "^0.2.0",
     "karma-jasmine": "^1.0.2",
     "karma-safari-launcher": "^0.1.1",
-    "karma-sauce-launcher": "^0.3.1",
     "rollup": "^0.50.0",
     "rollup-plugin-typescript2": "^0.4.1",
     "rollup-stream": "^1.19.0",
@@ -67,5 +65,6 @@
     "init": "npm install && npm install -g gulp && gulp place-git-hooks",
     "tslint": "node_modules/.bin/tslint --project ./",
     "tslint-format": "node_modules/.bin/tslint --fix --project ./ --force"
-  }
+  },
+  "dependencies": {}
 }
