Remove unused options and dependencies (#93)
* Remove hoek from our dependencies

* Remove unused options and dependencies

--- a/package.json
+++ b/package.json
@@ -25,17 +25,14 @@
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
     "@types/karma-fixture": "^0.2.2",
+    "browserify": "^16.2.2",
     "chai": "^3.5.0",
-    "codecov": "^1.0.1",
-    "complexity-report": "^1.4.1",
-    "copyfiles": "^1.0.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-typescript": "^3.1.6",
     "gulp-uglify": "^2.1.2",
     "jasmine-core": "^2.4.1",
-    "jscs": "^2.10.1",
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.5",
     "karma-chai": "^0.1.0",
@@ -49,23 +46,18 @@
     "karma-ie-launcher": "^0.2.0",
     "karma-jasmine": "^1.0.2",
     "karma-safari-launcher": "^0.1.1",
-    "karma-sauce-launcher": "^0.3.1",
-    "rollup": "^0.50.0",
     "rollup-plugin-typescript2": "^0.4.1",
     "rollup-stream": "^1.19.0",
     "run-sequence": "^1.2.2",
     "ts-node": "^3.0.2",
-    "tslib": "^1.7.1",
     "tslint": "^4.5.1",
-    "typescript": "^2.0.7",
-    "uglify-js": "^2.7",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "watchify": "^3.11.0"
   },
   "scripts": {
-    "complexity": "node node_modules/complexity-report/src/index.js -f plain src/",
     "init": "npm install && npm install -g gulp && gulp place-git-hooks",
     "tslint": "node_modules/.bin/tslint --project ./",
     "tslint-format": "node_modules/.bin/tslint --fix --project ./ --force"
-  }
+  },
+  "dependencies": {}
 }
