Update Travis CI install command

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ sudo: false
 language: node_js
 node_js:
   - "5"
-before_install:
-  - npm install -g npm@^6.3.0
-before_script:
-  - npm install -g gulp gulp-cli
+install:
+  - npm run init
 script:
   - gulp build
   - gulp coverage
