Removing all npm security warnings and updating (almost) all outdated packages (#100)
* Removed ALL npm security warnings

* Updating all outdated non-breaking packages

* Updated travis.yml to use latest npm

* Update Travis CI install command

* Update Travis CI node version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 sudo: false
 language: node_js
 node_js:
-  - "5"
+  - "8"
 before_script:
-  - npm install -g gulp
+  - npm install -g gulp gulp-cli
 script:
   - gulp build
   - gulp coverage
