--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-typescript": "^5.0.0-alpha.3",
     "gulp-uglify": "^3.0.1",
+    "husky": "^0.14.3",
     "jasmine-core": "^3.2.0",
     "karma": "^3.0.0",
     "karma-browserify": "^5.0.5",
@@ -46,6 +47,7 @@
     "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-safari-launcher": "^1.0.0",
+    "lint-staged": "^7.2.2",
     "rollup-plugin-typescript2": "^0.4.1",
     "rollup-stream": "^1.19.0",
     "ts-node": "^7.0.0",
@@ -54,8 +56,14 @@
     "watchify": "^3.11.0"
   },
   "scripts": {
-    "init": "npm install && npm install -g gulp && npm install -g gulp-cli && gulp place-git-hooks",
+    "init": "npm install && npm install -g gulp && npm install -g gulp-cli",
+    "precommit": "lint-staged",
     "tslint": "node_modules/.bin/tslint --project ./",
     "tslint-format": "node_modules/.bin/tslint --fix --project ./ --force"
+  },
+  "lint-staged": {
+    "*ts": [
+      "tslint --format codeFrame"
+    ]
   }
 }
