--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "bugs": {
     "url": "https://github.com/Microsoft/clarity-js/issues"
   },
+  "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/jasmine": "^2.5.37",
@@ -46,6 +47,7 @@
     "karma-html2js-preprocessor": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
+    "karma-json-fixtures-preprocessor": "0.0.6",
     "karma-safari-launcher": "^1.0.0",
     "lint-staged": "^7.2.2",
     "rollup-plugin-typescript2": "^0.4.1",
