--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "An analytics library that uses web page interactions to generate aggregated insights",
   "author": "Microsoft Corp.",
   "license": "MIT",
-  "main": "build/index.js",
-  "types": "index.d.ts",
+  "main": "build/src/index.js",
+  "types": "types/index.d.ts",
   "keywords": [
     "clarity",
     "Microsoft",
