Got Karma to work on TypeScript tests directly

--- a/package.json
+++ b/package.json
@@ -25,21 +25,23 @@
   "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "@types/jasmine": "^2.8.11",
+    "@types/jasmine": "^2.5.35",
     "@types/karma-fixture": "^0.2.2",
     "browserify": "^16.2.3",
     "chai": "^4.2.0",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-typescript": "^5.0.0-alpha.3",
+    "gulp-typescript": "^5.0.0",
     "gulp-uglify": "^3.0.1",
     "husky": "^0.14.3",
+    "jasmine": "^3.3.1",
     "jasmine-core": "^3.3.0",
     "karma": "^3.1.1",
     "karma-browserify": "^5.0.5",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.2",
     "karma-detect-browsers": "^2.3.3",
     "karma-edge-launcher": "^0.4.1",
@@ -50,11 +52,13 @@
     "karma-jasmine": "^1.0.2",
     "karma-json-fixtures-preprocessor": "0.0.6",
     "karma-safari-launcher": "^1.0.0",
+    "karma-typescript": "latest",
     "lint-staged": "^7.3.0",
     "rollup-plugin-typescript2": "^0.4.1",
     "rollup-stream": "^1.19.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
+    "typescript": "latest",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0"
   },
@@ -62,7 +66,8 @@
     "init": "npm install && npm install -g gulp && npm install -g gulp-cli",
     "precommit": "lint-staged",
     "tslint": "node_modules/.bin/tslint --project ./",
-    "tslint-format": "node_modules/.bin/tslint --fix --project ./ --force"
+    "tslint-format": "node_modules/.bin/tslint --fix --project ./ --force",
+    "karma": "node_modules/.bin/tsc karma/karma.conf.ts && \"node_modules/.bin/karma\" start karma/karma.conf.js"
   },
   "lint-staged": {
     "*ts": [
