--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
   },
   "scripts": {
     "init": "npm install && npm install -g gulp && npm install -g gulp-cli",
+    "test:headless": "node_modules/.bin/karma start karma.conf.js",
     "precommit": "lint-staged",
     "tslint": "node_modules/.bin/tslint --project ./",
-    "tslint-format": "node_modules/.bin/tslint --fix --project ./ --force",
-    "karma": "node_modules/.bin/tsc karma/karma.conf.ts && \"node_modules/.bin/karma\" start karma/karma.conf.js"
+    "tslint-format": "node_modules/.bin/tslint --fix --project ./ --force"
   },
   "lint-staged": {
     "*ts": [
