Finished updating tests with karma-typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
         "noLib": false,
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true,
-        "outDir": "build/",
-        "types" : ["jasmine", "karma-fixture"],
+        "outDir": "build/"
     },
     "include":[
        "src/**/*.ts",
