--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "scripts": {
     "init": "npm install && npm install -g gulp && npm install -g gulp-cli",
-    "test:headless": "node_modules/.bin/karma start karma.conf.js",
+    "test:headless": "node_modules/.bin/karma start karma/config.headless.js",
     "precommit": "lint-staged",
     "tslint": "node_modules/.bin/tslint --project ./",
     "tslint-format": "node_modules/.bin/tslint --fix --project ./ --force"
