--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "declaration": false,
         "noImplicitAny": false,
         "noImplicitUseStrict": false,
-        "noUnusedLocals": true,
+        "noUnusedLocals": false,
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
@@ -18,7 +18,6 @@
     },
     "include":[
        "src/**/*.ts",
-       "test/**/*.ts",
        "types/**/*.d.ts",
        "karma/**/*.ts",
     ],
