--- a/package.json
+++ b/package.json
@@ -52,13 +52,13 @@
     "karma-jasmine": "^1.0.2",
     "karma-json-fixtures-preprocessor": "0.0.6",
     "karma-safari-launcher": "^1.0.0",
-    "karma-typescript": "latest",
+    "karma-typescript": "^3.0.13",
     "lint-staged": "^7.3.0",
     "rollup-plugin-typescript2": "^0.4.1",
     "rollup-stream": "^1.19.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
-    "typescript": "latest",
+    "typescript": "^3.2.4",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0"
   },
