Run Karma tests directly on typescript files (#124)
* Got Karma to work on TypeScript tests directly

* Got Karma working on existing sample test

* Moved all tests to new setup

* Finished updating tests with karma-typescript

* Travis build and test routine updates

* Update package versions and temporarily disable broken compression tests

* Update karma configs for various browsers

* Disable blocking flaky tests and add relevant work item

* Resolving PR feedback #1

* Fix karma-typescript compiler issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
         "target": "es5",
         "module": "commonjs",
         "moduleResolution": "node",
+        "lib": ["es5", "es6", "dom"],
         "isolatedModules": false,
-        "jsx": "react",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "declaration": false,
         "noImplicitAny": false,
         "noImplicitUseStrict": false,
-        "noUnusedLocals": true,
+        "noUnusedLocals": false,
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
@@ -20,8 +20,8 @@
     },
     "include":[
        "src/**/*.ts",
-       "test/**/*.ts",
-       "types/**/*.d.ts"
+       "types/**/*.d.ts",
+       "karma/**/*.ts",
     ],
     "compileOnSave": true,
     "buildOnSave": false,
