--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "@types/jasmine": "^2.8.11",
+    "@types/jasmine": "^3.3.7",
     "@types/karma-fixture": "^0.2.2",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@types/webpack": "^4.4.23",
@@ -36,13 +36,15 @@
     "del": "^3.0.0",
     "del-cli": "^1.1.0",
     "gulp": "^4.0.0",
-    "gulp-typescript": "^5.0.0-alpha.3",
+    "gulp-typescript": "^5.0.0",
     "husky": "^0.14.3",
+    "jasmine": "^3.3.1",
     "jasmine-core": "^3.3.0",
     "karma": "^3.1.1",
     "karma-browserify": "^5.0.5",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.2",
     "karma-detect-browsers": "^2.3.3",
     "karma-edge-launcher": "^0.4.1",
@@ -53,6 +55,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-json-fixtures-preprocessor": "0.0.6",
     "karma-safari-launcher": "^1.0.0",
+    "karma-typescript": "^3.0.13",
     "lint-staged": "^7.3.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
@@ -69,6 +72,9 @@
     "build:dev": "gulp build && npm run build:bundle:dev",
     "build:bundle": "node_modules/.bin/webpack --config webpack/configs/prod.ts",
     "build:bundle:dev": "node_modules/.bin/webpack --config webpack/configs/dev.ts",
+    "test:headless": "node_modules/.bin/karma start karma/configs/headless.js",
+    "test:chrome": "node_modules/.bin/karma start karma/configs/chrome.js",
+    "test:firefox": "node_modules/.bin/karma start karma/configs/firefox.js",
     "precommit": "lint-staged",
     "tslint": "node_modules/.bin/tslint --project ./",
     "tslint-format": "node_modules/.bin/tslint --fix --project ./ --force"
