--- a/package.json
+++ b/package.json
@@ -26,20 +26,15 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/jasmine": "^3.3.7",
-    "@types/karma-fixture": "^0.2.2",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@types/webpack": "^4.4.23",
     "@types/webpack-merge": "^4.1.3",
     "awesome-typescript-loader": "^5.2.1",
-    "browserify": "^16.2.3",
     "chai": "^4.2.0",
     "del-cli": "^1.1.0",
-    "husky": "^0.14.3",
+    "husky": "^1.3.1",
     "jasmine": "^3.3.1",
-    "jasmine-core": "^3.3.0",
     "karma": "^3.1.1",
-    "karma-browserify": "^5.0.5",
-    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.2",
@@ -54,11 +49,10 @@
     "karma-safari-launcher": "^1.0.0",
     "karma-typescript": "^4.0.0-beta.3",
     "lint-staged": "^7.3.0",
-    "ts-node": "^7.0.0",
+    "ts-node": "^8.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.2.4",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "watchify": "^3.11.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-merge": "^4.2.1"
@@ -67,7 +61,7 @@
     "build": "node_modules/.bin/webpack --config webpack/configs/prod.ts",
     "build:dev": "node_modules/.bin/webpack --config webpack/configs/dev.ts",
     "build:clean": "del-cli build/*",
-    "test:headless": "node_modules/.bin/karma start karma/configs/headless.js",
+    "test": "node_modules/.bin/karma start karma/configs/headless.js",
     "test:chrome": "node_modules/.bin/karma start karma/configs/chrome.js",
     "test:firefox": "node_modules/.bin/karma start karma/configs/firefox.js",
     "tslint": "node_modules/.bin/tslint --project ./",
