--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 sudo: false
 language: node_js
 node_js:
-  - "8"
-before_script:
-  - npm install -g gulp gulp-cli
+  - "10"
 script:
-  - npm run build
-  - npm run test:headless
+  - npm run test
