--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ sudo: false
 language: node_js
 node_js:
   - "10"
+cache:
+  yarn: true
+  directories:
+    - node_modules
 script:
-  - npm run test
+  - yarn test
