Fixing husky hook name

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   },
   "husky": {
     "hooks": {
-      "precommit": "lint-staged"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
