--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clarity-js",
-  "version": "0.2.10",
+  "version": "0.2.11",
   "description": "An analytics library that uses web page interactions to generate aggregated insights",
   "author": "Microsoft Corp.",
   "license": "MIT",
@@ -26,6 +26,8 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/jasmine": "^3.3.7",
+    "@types/karma-fixture": "^0.2.5",
+    "@types/pubsub-js": "^1.5.18",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@types/webpack": "^4.4.23",
     "@types/webpack-merge": "^4.1.3",
@@ -44,11 +46,13 @@
     "karma-fixture": "^0.2.6",
     "karma-html2js-preprocessor": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
+    "karma-jasmine": "^2.0.1",
     "karma-json-fixtures-preprocessor": "0.0.6",
     "karma-safari-launcher": "^1.0.0",
     "karma-typescript": "^4.0.0-beta.3",
     "lint-staged": "^7.3.0",
+    "merge": "^1.2.1",
+    "pubsub-js": "^1.7.0",
     "ts-node": "^8.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.2.4",
