Converted 'src' paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
-        "suppressImplicitAnyIndexErrors": true
+        "suppressImplicitAnyIndexErrors": true,
+        "baseUrl": ".",
+        "paths": {
+            "@src/*": ["src/*"],
+        }
     },
     "include":[
        "src/**/*.ts",
