--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "baseUrl": ".",
         "paths": {
             "@src/*": ["src/*"],
+            "@karma/*": ["karma/*"]
         }
     },
     "include":[
