--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "karma-jasmine": "^2.0.1",
     "karma-json-fixtures-preprocessor": "0.0.6",
     "karma-safari-launcher": "^1.0.0",
-    "karma-typescript": "^4.0.0-beta.3",
+    "karma-typescript": "^4.0.0",
     "lint-staged": "^7.3.0",
     "merge": "^1.2.1",
     "pubsub-js": "^1.7.0",
