Resolving all imports with ../ paths using typescript path aliases (#133)
* Converted 'src' paths

* Converted '@karma' paths

* Resolved path hell

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
-        "suppressImplicitAnyIndexErrors": true
+        "suppressImplicitAnyIndexErrors": true,
+        "baseUrl": ".",
+        "paths": {
+            "@src/*": ["src/*"],
+            "@karma/*": ["karma/*"],
+            "@clarity-types/*": ["types/*"]
+        }
     },
     "include":[
        "src/**/*.ts",
