TSLint: Additional typedefs & Remove unused tsconfig fields

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,9 @@
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
-        "moduleResolution": "node",
         "lib": ["es2015", "dom"],
-        "isolatedModules": false,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "declaration": false,
-        "noImplicitAny": false,
-        "noImplicitUseStrict": false,
-        "noUnusedLocals": false,
-        "removeComments": true,
-        "noLib": false,
-        "preserveConstEnums": true,
+        "noImplicitAny": true,
+        "noUnusedLocals": true,
         "suppressImplicitAnyIndexErrors": true,
         "baseUrl": ".",
         "paths": {
