--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "@types/webpack-merge": "^4.1.3",
     "awesome-typescript-loader": "^5.2.1",
     "chai": "^4.2.0",
-    "del-cli": "^1.1.0",
-    "husky": "^1.3.1",
+    "del-cli": "^2.0.0",
+    "husky": "^3.0.0",
     "jasmine": "^3.3.1",
-    "karma": "^3.1.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
+    "karma": "4.2.0",
+    "karma-chrome-launcher": "^3.0.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage": "^1.1.2",
     "karma-detect-browsers": "^2.3.3",
     "karma-edge-launcher": "^0.4.1",
