--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "clarity-js",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.2",
   "description": "An analytics library that uses web page interactions to generate aggregated insights",
   "author": "Microsoft Corp.",
   "license": "MIT",
-  "main": "build/index.js",
+  "main": "clarity.js",
   "types": "types/index.d.ts",
   "keywords": [
     "clarity",
@@ -66,7 +66,7 @@
     "build:main": "webpack --config webpack/configs/index.ts",
     "build:cjs": "webpack --config webpack/configs/prod.ts",
     "build:cjs:dev": "webpack --config webpack/configs/dev.ts",
-    "build:clean": "del-cli build/*",
+    "build:clean": "del-cli build/* && del-cli clarity.js && del-cli decode.js",
     "tslint": "tslint --project ./",
     "tslint:fix": "tslint --fix --project ./ --force"
   },
