--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clarity-js",
-  "version": "1.0.0-beta.20",
+  "version": "1.0.0-beta.21",
   "description": "An analytics library that uses web page interactions to generate aggregated insights",
   "author": "Microsoft Corp.",
   "license": "MIT",
@@ -24,42 +24,42 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/jasmine": "^3.3.7",
-    "@types/karma-fixture": "^0.2.5",
-    "@types/pubsub-js": "^1.5.18",
-    "@types/uglifyjs-webpack-plugin": "^1.1.0",
-    "@types/webpack": "^4.4.23",
-    "@types/webpack-merge": "^4.1.3",
-    "awesome-typescript-loader": "^5.2.1",
-    "chai": "^4.2.0",
-    "del-cli": "^1.1.0",
-    "husky": "^1.3.1",
-    "jasmine": "^3.3.1",
-    "karma": "^3.1.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage": "^1.1.2",
-    "karma-detect-browsers": "^2.3.3",
-    "karma-edge-launcher": "^0.4.1",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-fixture": "^0.2.6",
-    "karma-html2js-preprocessor": "^1.0.0",
-    "karma-ie-launcher": "^1.0.0",
-    "karma-jasmine": "^2.0.1",
+    "@types/chai": "4.2.11",
+    "@types/jasmine": "3.5.10",
+    "@types/karma-fixture": "0.2.5",
+    "@types/pubsub-js": "1.5.18",
+    "@types/uglifyjs-webpack-plugin": "1.1.0",
+    "@types/webpack": "4.41.10",
+    "@types/webpack-merge": "4.1.5",
+    "awesome-typescript-loader": "5.2.1",
+    "chai": "4.2.0",
+    "del-cli": "3.0.0",
+    "husky": "4.2.3",
+    "jasmine": "3.5.0",
+    "karma": "4.4.1",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-cli": "2.0.0",
+    "karma-coverage": "2.0.1",
+    "karma-detect-browsers": "2.3.3",
+    "karma-edge-launcher": "0.4.2",
+    "karma-firefox-launcher": "1.3.0",
+    "karma-fixture": "0.2.6",
+    "karma-html2js-preprocessor": "1.1.0",
+    "karma-ie-launcher": "1.0.0",
+    "karma-jasmine": "3.1.1",
     "karma-json-fixtures-preprocessor": "0.0.6",
-    "karma-safari-launcher": "^1.0.0",
-    "karma-typescript": "^4.0.0",
-    "lint-staged": "^7.3.0",
-    "merge": "^1.2.1",
-    "pubsub-js": "^1.7.0",
-    "ts-node": "^8.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.2.4",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-merge": "^4.2.1"
+    "karma-safari-launcher": "1.0.0",
+    "karma-typescript": "5.0.2",
+    "lint-staged": "10.1.2",
+    "merge": "1.2.1",
+    "pubsub-js": "1.8.0",
+    "ts-node": "8.8.2",
+    "tslint": "6.1.1",
+    "typescript": "3.8.3",
+    "uglifyjs-webpack-plugin": "2.2.0",
+    "webpack": "4.42.1",
+    "webpack-cli": "3.3.11",
+    "webpack-merge": "4.2.2"
   },
   "scripts": {
     "build": "yarn build:clean && yarn build:main && yarn build:cjs",
